--- a/bin/sample.html
+++ b/bin/sample.html
@@ -7,6 +7,10 @@
 			font-size: 13;
 
 		}
+		
+		input, select, textarea{
+			color: #C7CFDC;
+		}
 
 	</style>
 	
@@ -24,9 +28,9 @@
 			var comp = null;
 			if(component.type == "BUTTON") {
 				console.log("BUTTON");
-				comp = document.createElement("BUTTON");
-				var t = document.createTextNode(component.text);       
-				comp.appendChild(t);
+				comp = document.createElement("INPUT");
+				comp.type ="submit";
+				comp.value=component.text;
 				comp.disabled =true;
 			}
 			else if(component.type == "LABEL") {
